# scaler

./: .dockerignore  .env.example  Dockerfile  README.md  client.py  deploy_to_hf_space.ps1  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py  validate_submission.py
openenv/core/: __init__.py  client_types.py  env_client.py
openenv/core/env_server/: app.py  interfaces.py  types.py
retail_ops_env/: __init__.py  client.py  graders.py  models.py  tasks.py
retail_ops_env/server/: __init__.py  app.py  case_resolution_env.py
server/: Dockerfile  app.py  case_resolution_env.py
